--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,24 @@
       name="description"
       content="Jemima Abu is a self-taught Front End Developer and school-taught Systems Engineer from Lagos, Nigeria."
     />
-   
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/favicon-16x16.png"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!-- Google fonts -->
@@ -611,6 +625,42 @@
           U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193,
           U+2212, U+2215, U+FEFF, U+FFFD;
       }
+
+      body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+      }
+
+      .custom-loader-wrapper {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: #0b0b0b;
+        display: grid;
+        place-items: center;
+      }
+
+      .custom-loader {
+        border: 16px solid #e3e3e3;
+        border-top: 16px solid #3498db;
+        border-radius: 50%;
+        width: 140px;
+        height: 140px;
+        animation: spin 1s linear infinite;
+      }
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+
+        100% {
+          transform: rotate(360deg);
+        }
+      }
     </style>
 
     <title>JEMIMA ABU: Front End Developer</title>
@@ -618,7 +668,11 @@
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div class="custom-loader-wrapper">
+        <div class="custom-loader"></div>
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
